[package]
name = "gh-repo-info"
version = "0.1.0"
edition = "2021"
description = "Get GitHub repo info"
documentation = "https://docs.rs/gh-repo-info"
keywords = ["github", "gh", "repo"]
categories = []
repository = "https://github.com/vallentin/gh-repo-info"
license = "MIT"
readme = "README.md"

[badges]
maintenance = { status = "passively-maintained" }

[features]
blocking = ["reqwest/blocking"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
urlencoding = "2.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
